SP-4668 fixed hamburger menu visibility in desktop mode

--- a/frontend/soilhive-app/src/components/Header/Header.module.scss
+++ b/frontend/soilhive-app/src/components/Header/Header.module.scss
@@ -64,7 +64,6 @@
   border: none;
   cursor: pointer;
   padding: 0;
-  display: flex;
   align-items: center;
   justify-content: center;
 
